# papirs

./: LICENSE  README.md
client/: Cargo.toml  Makefile  README.md
client/assets/material-design-icons/: README.md
client/assets/octicons/: README.md
client/src/: common.rs  ctrl.rs  lib.rs  model.rs  utils.rs  view.rs  web.rs
client/src/common/: utils.rs
client/src/model/: compat.rs  data.rs  history.rs  recorder.rs  tiling.rs
client/src/static/: index.html  main.sass
