[package]
name = "papirs-client"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7.1"
base64 = "0.13.0"
bincode = "1.3.3"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
delegate-attr = "0.2.9"
enum_dispatch = "0.3.7"
flate2 = "1.0.20"
geo = { version = "0.18.0", features = ["use-serde"] }
getset = "0.1.1"
itertools = "0.10.1"
js-sys = "0.3.52"
log = "0.4.14"
rustc-hash = "1.1.0"
serde = { version = "1.0.127", features = ["derive"] }
shrinkwraprs = "0.3.0"
uuid = { version = "0.8.2", features = ["v4", "serde", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.75", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.52"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'DomMatrix',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'MouseEvent',
  'Path2d',
  'Storage',
  'Window',
]

[profile.release]
lto = true
