[package]
name = "papirs-client"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.43"
arrayvec = "0.7.1"
base64 = "0.13.0"
bincode = "1.3.3"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
derive_more = "0.99.16"
enum-map = "1.1.1"
enum_dispatch = "0.3.7"
flate2 = "1.0.20"
geo = { version = "0.18.0", features = ["use-serde"] }
itertools = "0.10.1"
js-sys = "0.3.53"
log = "0.4.14"
rustc-hash = "1.1.0"
serde = { version = "1.0.129", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde", "wasm-bindgen"] }
wasm-bindgen = "0.2.76"

[dependencies.web-sys]
version = "0.3.53"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'DomMatrix',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'MouseEvent',
  'Path2d',
  'Storage',
  'Window',
]

[profile.release]
lto = true
