[package]
name = "papirs-client"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.45"
arrayvec = "0.7.2"
base64 = "0.13.0"
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
derive_more = "0.99.16"
enum-map = "1.1.1"
enum_dispatch = "0.3.7"
flate2 = "1.0.22"
geo = { version = "0.18.0", features = ["use-serde"] }
itertools = "0.10.1"
js-sys = "0.3.55"
log = "0.4.14"
rustc-hash = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde", "wasm-bindgen"] }
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'DomMatrix',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'HtmlLabelElement',
  'KeyboardEvent',
  'MouseEvent',
  'Path2d',
  'Storage',
  'WheelEvent',
  'Window',
]

[profile.release]
lto = true
